# realtime-fraud-detection-engine

./: .gitignore  Dockerfile  Dockerfile.rust  README.md  app.py  consumer.py  detector.py  docker-compose.yml  generator.py  ml_service.py  prometheus.yml  requirements.txt  setup_redis.py  test_batch.csv  train_model.py
.github/workflows/: ci.yml
rust-detector/: Cargo.toml
rust-detector/src/: main.rs
