[package]
name = "rust-detector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13"
lazy_static = "1.4"
warp = "0.3"
